--- a/index.html
+++ b/index.html
@@ -886,12 +886,15 @@
                     <li>Espelho de Ponto assinado digitalmente ❌</li>
                     <li>Reconhecimento facial ❌</li>
                     <li>Solicitar alteração de sistema ❌</li>
+                    <li>Limite do banco 2GB</li>
                 </ul>
                 <div class="plan-price">
                     <p>ASSINATURA MENSAL</p>
                     <p>R$ 64,90</p>
                     <p>ATÉ 10 COLABORADORES</p>
-          
+                </div>
+                <button class="plan-button">Quero começar!</button>
+            </div>
 
             <!-- Plano Web PRO -->
             <div class="plan">
@@ -909,12 +912,15 @@
                     <li>Espelho de Ponto assinado digitalmente ✔️</li>
                     <li>Reconhecimento facial ❌</li>
                     <li>Solicitar alteração de sistema ❌</li>
+                    <li>Limite do banco 6GB</li>
                 </ul>
                 <div class="plan-price">
                     <p>ASSINATURA MENSAL</p>
                     <p>R$ 74,90</p>
                     <p>ATÉ 10 COLABORADORES</p>
-           
+                </div>
+                <button class="plan-button">Quero começar!</button>
+            </div>
 
             <!-- Plano Web ULTIMATE -->
             <div class="plan">
@@ -932,11 +938,15 @@
                     <li>Espelho de Ponto assinado digitalmente ✔️</li>
                     <li>Reconhecimento facial ✔️</li>
                     <li>Solicitar alteração de sistema ✔️</li>
+                    <li>Limite do banco 10GB</li>
                 </ul>
                 <div class="plan-price">
                     <p>ASSINATURA MENSAL</p>
                     <p>R$ 104,90</p>
                     <p>ATÉ 10 COLABORADORES</p>
+                </div>
+                <button class="plan-button">Quero começar!</button>
+            </div>
         </div>
     </div>
 
