--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,16 @@
 .eu {
     width: 100px;
 }
+} 
+.video_planos {
+    width: 400px; 
+    height: 300px; 
+    padding-left: 25px;  
+    justify-content: center;
+    align-items: center; 
+    margin-top: -60px; 
+    margin-bottom: 10px; 
+    margin-left: 35%;
 }
 
 
@@ -1246,7 +1256,7 @@
                 </div>
                 <button class="plan-button" data-plan="Web BASIC">Quero começar!</button>
             </div>
-
+        
             <!-- Plano Web PRO -->
             <div class="plan">
                 <div class="plan-header">Web PRO</div>
@@ -1272,7 +1282,7 @@
                 </div>
                 <button class="plan-button" data-plan="Web PRO">Quero começar!</button>
             </div>
-
+        
             <!-- Plano Web ULTIMATE -->
             <div class="plan">
                 <div class="plan-header">Web ULTIMATE</div>
@@ -1297,8 +1307,13 @@
                     <p>ATÉ 10 COLABORADORES</p>
                 </div>
                 <button class="plan-button" data-plan="Web ULTIMATE">Quero começar!</button>
-            </div>
+            </div> 
         </div>
+        <!-- Vídeo explicativo -->
+        <video class="video_planos" width="50" height="50" controls>
+            <source src="Planos Secullum Ponto _ Temos o plano perfeito para sua empresa.mp4" type="video/mp4">
+            Seu navegador não suporta a tag de vídeo.
+        </video>
     </div>
 
     <!-- Modal -->
