--- a/index.html
+++ b/index.html
@@ -924,8 +924,6 @@
     display: inline-block;
     padding: 10px; /* Adiciona espaço ao redor do vídeo */
     border-radius: 10px; /* Borda arredondada */
-    background-color: #112941; /* Cor de fundo para o contêiner do vídeo */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para o contêiner do vídeo */ 
     margin-top: -150px; 
     height: 100px;
 }
@@ -963,14 +961,70 @@
 @media (max-width: 1400px) {
     .centered-text h6 {
         font-size: 12px;
-    }
+    } 
+    .video_planos {
+    width: 450px; 
+    height: 350px; 
+    padding-left: 25px;  
+    justify-content: center;
+    align-items: center; 
+    margin-left: 20%; 
+    margin-bottom: 15px;
+}
 }
 
 /* Tamanho de fonte menor para telas menores que 809px */
 @media (max-width: 809px) {
     .centered-text h6 {
         font-size: 14px;
-    }
+    } 
+    .video_planos {
+    width: 270px; 
+    height: 170px; 
+    padding-left: 25px;  
+    justify-content: center;
+    align-items: center; 
+    margin-left: -30px; 
+    margin-bottom: 15px; 
+} 
+.info-section_contato {
+    font-size: 12px; 
+} 
+.eu {
+    width: 100px; 
+    padding-bottom: 5px; 
+    margin-bottom: 15px; 
+    margin-bottom: 25px;
+} 
+.video {
+
+    margin-top: -150px; 
+    height: 100px; 
+    margin-top: -100px;
+}
+
+.video video {
+    width: 350px;
+    max-width: 300px; /* Ajuste a largura conforme necessário */
+    height: auto;
+    border-radius: 10px; /* Borda arredondada do vídeo */ 
+    margin-top: 10px;
+}
+
+.video-title { 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    text-align: center; 
+    margin-top: 100px;
+}   
+
+.section-title {
+    font-size: 20px;
+} 
+.col-md-4 {
+    width: 110px; 
+    height: 80px; 
+}
 }
 
 /* Tamanho de fonte menor para telas menores que 768px */
@@ -984,11 +1038,19 @@
     padding: 10px; /* Adiciona espaço ao redor do vídeo */
     border: none;
     border-radius: 10px; /* Borda arredondada */
-    background-color: #112941; /* Cor de fundo para o contêiner do vídeo */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para o contêiner do vídeo */ 
     margin-top: -150px; 
     width: 150px; 
-    font-size: 10px; 
+    font-size: 10px;  
+} 
+.video_planos {
+    width: 250px; 
+    height: 150px; 
+    padding-left: 25px;  
+    justify-content: center;
+    align-items: center; 
+    margin-left: 20%; 
+    margin-bottom: 15px;
 }
 }
 
@@ -998,10 +1060,7 @@
         font-size: 10px; 
         margin-left: -220px; /* Move o texto para a esquerda */
     } 
-    .video video {
-        display: none; /* Torna o vídeo invisível em telas menores */
-    } 
-
+  
 } 
 @media (min-width: 768px) and (max-width: 1024px) {
     .centered-text h6 {
@@ -1013,7 +1072,6 @@
     padding: 10px; /* Adiciona espaço ao redor do vídeo */
     border: none;
     border-radius: 10px; /* Borda arredondada */
-    background-color: #112941; /* Cor de fundo para o contêiner do vídeo */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para o contêiner do vídeo */ 
     margin-top: -150px; 
     width: 250px; 
@@ -1036,7 +1094,6 @@
     padding: 10px; /* Adiciona espaço ao redor do vídeo */
     border: none;
     border-radius: 10px; /* Borda arredondada */
-    background-color: #112941; /* Cor de fundo para o contêiner do vídeo */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para o contêiner do vídeo */ 
     margin-top: -150px; 
     width: 250px; 
@@ -1047,21 +1104,12 @@
 } 
 .eu {
     width: 100px;
+}  
+@media (min-width: 900px) and (max-width: 1920pppx) {
+
 }
+
 } 
-.video_planos {
-    width: 400px; 
-    height: 300px; 
-    padding-left: 25px;  
-    justify-content: center;
-    align-items: center; 
-    margin-top: -60px; 
-    margin-bottom: 10px; 
-    margin-left: 35%;
-}
-
-
-
 
    </style>
 </head>
@@ -1134,7 +1182,7 @@
                     <div class="video">
                         <h3 class="video-title">Sistema Web</h3>
                         <video controls>
-                            <source src="web tamara.mp4" type="video/mp4">
+                            <source src="Secullum WEB.mp4">
                             Your browser does not support the video tag.
                         </video> 
                     </div> 
@@ -1166,7 +1214,7 @@
                     <div class="video">
                         <h3 class="video-title">Sistema Off</h3>
                         <video controls>
-                            <source src="Planos Secullum Ponto _ Temos o plano perfeito para sua empresa.mp4" type="video/mp4">
+                            <source src="Apresentação Off.mkv" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -1197,7 +1245,7 @@
                         <div class="col-md-9">
                             <p id="contact-info">
                                 <!-- Ícone para copiar e-mail -->
-                                <span class="copy-icon" onclick="copyText('email')">
+                                <span class="copy-icon_email" onclick="copyText('email')">
                                     <img src="icone.png" alt="Copiar e-mail" style="width: 20px; height: 20px; margin-right: 5px;">
                                 </span>
                                 <strong id="email">Alexandre.mastrandea@sonodaponto.com.br</strong><br>
@@ -1310,10 +1358,10 @@
             </div> 
         </div>
         <!-- Vídeo explicativo -->
-        <video class="video_planos" width="50" height="50" controls>
+        <center><video class="video_planos" height="450px" width="800px" controls>
             <source src="Planos Secullum Ponto _ Temos o plano perfeito para sua empresa.mp4" type="video/mp4">
             Seu navegador não suporta a tag de vídeo.
-        </video>
+        </video></center>
     </div>
 
     <!-- Modal -->
