--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
     display: inline-block;
     padding: 10px; /* Adiciona espaço ao redor do vídeo */
     border-radius: 10px; /* Borda arredondada */
-    margin-top: -150px; 
+    margin-top: 5px; 
     height: 100px;
 }
 
@@ -1105,9 +1105,7 @@
 .eu {
     width: 100px;
 }  
-@media (min-width: 900px) and (max-width: 1920pppx) {
 
-}
 
 } 
 
@@ -1164,7 +1162,7 @@
    
     
       <!-- Texto Centralizado -->
-      <div class="col-md-6 centered-text">
+    <!--   <div class="col-md-6 centered-text">
         <strong><h6>Pequena demonstração dos nossos sistemas</h6> 
              <b><h6>SECULLUM OFFLINE e SECULLUM WEB ULTIMATE</h6></b>
             <hr> 
@@ -1172,15 +1170,16 @@
             <h6>Ou em um cotação? Entre em contato</h6>
              </strong> 
     </div>
+-->
 
-
+    
     <div class="container main-content">
         <div class="row">
             <div class="col-md-6">
                 <!-- Vídeo acima da seção de Informações -->
                 <div class="video-container">
                     <div class="video">
-                        <h3 class="video-title">Sistema Web</h3>
+                        <h3 class="video-title">SISTEMA SECULLUM WEB</h3>
                         <video controls>
                             <source src="Secullum WEB.mp4">
                             Your browser does not support the video tag.
@@ -1212,7 +1211,7 @@
                 <!-- Vídeo acima da seção de Parcerias -->
                 <div class="video-container">
                     <div class="video">
-                        <h3 class="video-title">Sistema Off</h3>
+                        <h3 class="video-title">SISTEMA SECULLUM OFFLINE</h3>
                         <video controls>
                             <source src="Apresentação Off.mkv" type="video/mp4">
                             Your browser does not support the video tag.
@@ -1254,7 +1253,7 @@
                                 <span class="copy-icon" onclick="copyText('phone1')">
                                     <img src="icone.png" alt="Copiar telefone" style="width: 20px; height: 20px; margin-right: 5px;">
                                 </span>
-                                <strong id="phone1">(15) 9745-4174</strong><br>  
+                                <strong id="phone1">(15) 99745-4174</strong><br>  
 
                                 <!-- Ícone para copiar telefone 2 -->
                                 <span class="copy-icon" onclick="copyText('phone2')">
